# FlowTrack

./: .gitignore  .pdm-python  pyproject.toml
flowtrack/: db.sqlite3  manage.py
flowtrack/clients/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
flowtrack/clients/migrations/: 0001_initial.py  0002_companyclient_owner_individualclient_owner.py  0003_alter_companyclient_owner_and_more.py  0004_alter_companyclient_phone_and_more.py  0005_companyclient_contact_person_and_more.py  0006_alter_companyclient_nip.py  0007_alter_companyclient_region_and_more.py  0008_alter_companyclient_region_and_more.py  0009_alter_companyclient_address_and_more.py  0010_alter_companyclient_address_and_more.py  0011_alter_companyclient_region_and_more.py  0012_alter_companyclient_region_and_more.py
flowtrack/flowtrack/: asgi.py  settings.py  urls.py  utils.py  views.py  wsgi.py
flowtrack/offers/: admin.py  forms.py  models.py  urls.py  views.py
flowtrack/offers/migrations/: 0001_initial.py  0002_status_type.py  0003_offer_products.py  0004_alter_offer_options_offer_description_note.py  0005_alter_status_type.py  0006_alter_offer_status.py  0007_alter_offer_client_id_alter_offer_client_type_and_more.py  0008_remove_offer_products_offerproduct.py  0009_offer_products.py
flowtrack/products/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
flowtrack/products/migrations/: 0001_initial.py  (+7 more)
flowtrack/templates/: form_template.html  index.html  main.html  side_navbar.html  top_navbar.html
flowtrack/usersapp/: admin.py  forms.py  models.py  urls.py  views.py
(+18 files in other folders)
