[project]
name = "FlowTrack"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Daniel <dkowalski.dev@gmail.com>", email = "dkowalski.dev@gmail.com" },
]
dependencies = ["django>=5.2.4"]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python flowtrack/manage.py runserver"
migrate = "python flowtrack/manage.py migrate"
makemigrations = "python flowtrack/manage.py makemigrations"
